* Prepare your module for deprecation of triggers code XXX_INSERT to support also XXX_CREATE.
* More class properties (with old name in french) are now deprecated in favor of the property name in english.
* The json emulator dol_json_encode/decode() is removed. The native json PHP module must be enabled/available (this is the case by default with most PHP installation).


***** ChangeLog for 20.0.0 compared to 19.0 *****

For users:
----------
NEW: Compatibility with PHP 8.2 (with no need to disable warnings)
NEW: Font param Look and Feel THEME_FONT_FAMILY (#29302)
NEW: Param to show main menu logo in color (#29305)
NEW: #27048 add form to globally set "VARIANT_ALLOW_STOCK_MOVEMENT_ON_VARIANT_PARENT" variable (#27049)
NEW: #29274 Add possibility to have different mail for autocopy for holiday (#29275)
NEW: WebPortal module
NEW: Module Bookcal is now experimental (TimeZone not yet supported)
NEW: #24031 add option MAIN_GRANDTOTAL_LIST_SHOW to always show grand total to lists (#27247)
NEW: #28070 Adding mobile phone to thirdparty
NEW: Accept the __NOW__ and __USER_ID__key into filters
NEW: Accountancy - Add possibility for specific format FEC to sort with the FEC name (#29722)
NEW: Accountancy - Expense report - Add an option to use end period for transfer (#26706)
NEW: Accountancy - Show accounting result on balance
NEW: Accountancy - Show import key if exist (#29265)
NEW: Add option to change all service dates at once
NEW: Add a default limit in nb to agenda export
NEW: Add a Feedback-ID into email headers
NEW: Add a link "Fill with layout"
NEW: Add a link to add a website category in edit page properties
NEW: Add ALT+s to save a website page in edit mode
NEW: Add a protection in inventory when a product has stock of lot and is
NEW: Add a warning if invoice payment is Credit Transfer on newpayment.php (#29685)
NEW: Add Categorie filter for ActionComm (#28041)
NEW: Add code+label of payment mode and term in purchase invoice export